Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14460

lustre master build fail on ppcle64

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      build master on ppc64le with CentOS 8.3 failed

      libtool: link: (cd ".libs" && rm -f "liblnetconfig.so.4" && ln -s "liblnetconfig.so.4.0.0" "liblnetconfig.so.4")
      libtool: link: (cd ".libs" && rm -f "liblnetconfig.so" && ln -s "liblnetconfig.so.4.0.0" "liblnetconfig.so")
      libtool: link: (cd .libs/liblnetconfig.lax/libcfs.a && ar x "/tmp/rpmbuild-lustre-jenkins-0CfRHsoL/BUILD/lustre-2.14.0/lnet/utils/lnetconfig/../../../libcfs/libcfs/.libs/libcfs.a")
      libtool: link: ar cru .libs/liblnetconfig.a  liblnetconfig_la-liblnetconfig.o liblnetconfig_la-liblnetconfig_lnd.o liblnetconfig_la-cyaml.o  .libs/liblnetconfig.lax/libcfs.a/libcfs_la-l_ioctl.o .libs/liblnetconfig.lax/libcfs.a/libcfs_la-nidstrings.o .libs/liblnetconfig.lax/libcfs.a/libcfs_la-param.o .libs/liblnetconfig.lax/libcfs.a/libcfs_la-parser.o .libs/liblnetconfig.lax/libcfs.a/libcfs_la-string.o 
      libtool: link: ranlib .libs/liblnetconfig.a
      libtool: link: rm -fr .libs/liblnetconfig.lax
      libtool: link: ( cd ".libs" && rm -f "liblnetconfig.la" && ln -s "../liblnetconfig.la" "liblnetconfig.la" )
      lnetctl.c: In function 'jt_calc_service_id':
      lnetctl.c:275:39: error: format '%llx' expects argument of type 'long long unsigned int', but argument 2 has type '__u64' {aka 'long unsigned int'} [-Werror=format=]
        printf("service id:\n    value: 0x%llx\n", service_id);
                                          ~~~^     ~~~~~~~~~~
                                          %lx
      libtool: link: gcc -fPIC -D_GNU_SOURCE -O2 -g -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -fexceptions -fstack-protector-strong -grecord-gcc-switches -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mcpu=power8 -mtune=power8 -funwind-tables -fstack-clash-protection -g -O2 -Werror -Wl,-z -Wl,relro -Wl,-z -Wl,now -specs=/usr/lib/rpm/redhat/redhat-hardened-ld -Wl,-z -Wl,relro -o wirecheck wirecheck.o  -L. -lkeyutils
      libtool: link: gcc -fPIC -D_GNU_SOURCE -O2 -g -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -fexceptions -fstack-protector-strong -grecord-gcc-switches -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1 -m64 -mcpu=power8 -mtune=power8 -funwind-tables -fstack-clash-protection -g -O2 -Werror -Wl,-z -Wl,relro -Wl,-z -Wl,now -specs=/usr/lib/rpm/redhat/redhat-hardened-ld -Wl,-z -Wl,relro -o .libs/routerstat routerstat.o  -L. ../../lnet/utils/lnetconfig/.libs/liblnetconfig.so -L../../../libcfs/libcfs -lyaml -lm -lreadline -lkeyutils 

            flei Feng Lei
            mdiep Minh Diep - TLC
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: